# chesscpp2

./: .clang-format  .clangd  .claudeignore  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  IMPROVEMENTS.md  QUICKSTART.md  README.md  book.txt  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/: 2026-03-25-self-play-analysis.md
docs/plans/: 2025-10-30-lazy-smp-multithreading-design.md
docs/superpowers/plans/: 2026-03-23-ai-refactor-and-perf.md  2026-03-24-king-safety-eval-improvements.md
docs/superpowers/specs/: 2026-03-23-ai-refactor-and-perf-design.md  2026-03-24-endgame-eval-improvements-design.md  2026-03-24-king-safety-eval-improvements-design.md
inc/: AI.h  Bitboard.h  Eval.h  Game.h  Logger.h  Magic.h  MoveGen.h  MoveList.h  MovePicker.h  PST.h  Polyglot.h  Position.h  Tablebase.h  Types.h  UCI.h  Window.h  Zobrist.h
scripts/: animate_game.py  depth12_vs_stockfish6.py  depth12_vs_stockfish8.py  depth8_vs_stockfish.py  diagnose.py  self_play_test.py  setup.sh  test_preference.py  tournament.py  verify_perft.sh  watch_game.py
src/: AI.cpp  Bitboard.cpp  Eval.cpp  Game.cpp  Magic.cpp  MoveGen.cpp  MovePicker.cpp  Polyglot.cpp  Position.cpp  Tablebase.cpp  UCI.cpp  Window.cpp  Zobrist.cpp  main.cpp
test/: CMakeLists.txt  PolyglotTestUtils.h  perft_suite.cpp  test_ai.cpp  test_bitboard.cpp  test_eval.cpp  test_game.cpp  test_movegen.cpp  test_polyglot.cpp  test_position.cpp  test_uci.cpp
